[package]
name = "kyc-network"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <isakkhar@gmail.com>"]
description = "Decentralized KYC/AML Verification Network"
license = "MIT"
repository = "https://github.com/isakkhar/kyc-network"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
ring = "0.16"
base64 = "0.21"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
substrate-subxt = "0.32"
sp-core = "21.0"
sp-runtime = "24.0"
sp-keyring = "24.0"
jsonwebtoken = "8.3"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
ed25519-dalek = "1.0"
zeroize = "1.6"
secrecy = "0.8"
argon2 = "0.5"

[dev-dependencies]
tokio-test = "0.4"
actix-web-test = "4.0"
mockall = "0.11"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[[bin]]
name = "kyc-server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1